--- a/src/style.css
+++ b/src/style.css
@@ -134,7 +134,8 @@ nav a:hover {
   font-size: 1.2rem;
 }
 
-.menu-intro {
+.menu-intro,
+.gallery-intro {
   max-width: 20rem;
   margin: 0 auto 0 auto;
   text-align: center;
@@ -238,6 +239,8 @@ nav a:hover {
 .gallery {
   padding-top: 0;
   min-height: 100vh;
+  display: flex;
+  align-items: center;
 
   color: white;
   background-image: url('./img/gallery.jpg');
@@ -245,7 +248,15 @@ nav a:hover {
   background-position: top center;
   background-attachment: fixed;
 }
-
+.container-gallery{
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+  backdrop-filter: blur(10px);
+  
+}
+.gallery-intro{
+  backdrop-filter: blur(10px) ;
+}
 .contacts {
   margin-bottom: 4rem;
 
