Layer component folder + ingredients field + forEach to appendChild

--- a/src/style.css
+++ b/src/style.css
@@ -216,7 +216,7 @@ nav a:hover {
   background-color: #e67e51;
 }
 
-.layer {
+/*.layer {
   display: flex;
   padding: 0.25rem;
 }
@@ -234,7 +234,7 @@ nav a:hover {
 
 .layer__label {
   line-height: 1rem;
-}
+}*/
 
 .gallery {
   padding-top: 0;
